--- a/setup/ef-xapp/Dockerfile
+++ b/setup/ef-xapp/Dockerfile
@@ -9,7 +9,9 @@ ARG DBAAS_SERVICE_HOST=10.0.2.12
 ARG DBAAS_SERVICE_PORT="6379"
 
 #==================================================================================
-FROM ubuntu:18.04 as ricbuild
+FROM ubuntu:20.04 as ricbuild
+# Need to download from rayproject to have ray installed
+# FROM rayproject/ray:latest as ricbuild
 
 # to override repo base, pass in repo argument when running docker build:
 # docker build --build-arg REPOBASE=http://abc.def.org . ....
@@ -24,13 +26,18 @@ ARG MDC_VER=0.0.4-1
 ARG RMR_VER=4.0.5
 ARG RNIB_VER=1.0.0
 
+
+
 ENV RMR_RTG_SVC="9999" \
   RMR_SEED_RT="/home/${CONNECTOR_DIR}/init/routes.txt" \
   LD_LIBRARY_PATH="/usr/local/lib:/usr/local/libexec" \
   VERBOSE=0 \
   CONFIG_FILE=/opt/ric/config/config-file.json \
   DBAAS_SERVICE_HOST=${DBAAS_SERVICE_HOST} \
-  DBAAS_SERVICE_PORT=${DBAAS_SERVICE_PORT}
+  DBAAS_SERVICE_PORT=${DBAAS_SERVICE_PORT} \
+  # Added to avoid stopping at time zone
+  TZ=Europe/Rome \
+  DEBIAN_FRONTEND=noninteractive
 
 COPY ${CONNECTOR_DIR} ${STAGE_DIR}
 COPY ${XAPP_DIR} /home/${XAPP_DIR}
@@ -38,8 +45,30 @@ COPY ${XAPP_DIR} /home/${XAPP_DIR}
 WORKDIR ${STAGE_DIR}
 
 # Install necessary packages
-RUN apt-get update  \
+RUN apt-get update
+RUN apt-get remove -y --purge python* \
   && apt-get install -y \
+    python3 \
+    python3-pip
+# Added - Install gymnasium for RL
+RUN pip install "ray[rllib]" \
+  && pip install tensorflow \
+# pip install ray tensorflow torch\
+  && pip install gymnasium \
+  && pip install tensorflow-probability
+  
+  
+  # && pip3 install gymnasium \
+  # && pip3 install networkx
+  # && pip3 install protobuf==3.19.6 \
+  # && pip3 install multidict \
+  # && pip3 install attr \
+  # && pip3 install yarl \
+  # && pip3 install async_timeout \
+  # && pip3 install idna_ssl \
+  # && pip3 install --upgrade setuptools \
+  # && pip3 install ray
+RUN apt-get install -y \
     cmake \
     git \
     build-essential \
@@ -48,7 +77,8 @@ RUN apt-get update  \
     autoconf \
     pkg-config \
     gawk \
-    libtool \
+    libtool 
+RUN apt-get install -y \
     wget \
     zlib1g-dev \
     libffi-dev \
@@ -56,15 +86,9 @@ RUN apt-get update  \
     vim \
     cpputest \
     libboost-all-dev \
-    libhiredis-dev \
-  && apt-get remove -y --purge python* \
-  && apt-get install -y \
-    python3 \
-    python3-pip \
-# Added - Install gymnasium for RL
-    &&pip install gymnasium \
+    libhiredis-dev 
 # Install mdclog using debian package hosted at packagecloud.io
-  && wget -nv --content-disposition https://packagecloud.io/o-ran-sc/release/packages/debian/stretch/mdclog_${MDC_VER}_amd64.deb/download.deb \
+RUN wget -nv --content-disposition https://packagecloud.io/o-ran-sc/release/packages/debian/stretch/mdclog_${MDC_VER}_amd64.deb/download.deb \
   && wget -nv --content-disposition https://packagecloud.io/o-ran-sc/release/packages/debian/stretch/mdclog-dev_${MDC_VER}_amd64.deb/download.deb \
   && dpkg -i mdclog_${MDC_VER}_amd64.deb \
   && dpkg -i mdclog-dev_${MDC_VER}_amd64.deb \
@@ -78,27 +102,27 @@ RUN apt-get update  \
 # Install RNIB libraries
   && wget -nv --content-disposition https://packagecloud.io/o-ran-sc/release/packages/debian/stretch/rnib_${RNIB_VER}_all.deb/download.deb \
   && dpkg -i rnib_${RNIB_VER}_all.deb \
-  && rm rnib_${RNIB_VER}_all.deb \
+  && rm rnib_${RNIB_VER}_all.deb 
 # Install dbaas
-  && cd ${STAGE_DIR} \
+RUN cd ${STAGE_DIR} \
   && git clone https://gerrit.o-ran-sc.org/r/ric-plt/dbaas \
   && cd dbaas/redismodule \
   && ./autogen.sh \
   && ./configure \
   && make -j ${nproc} all \
   && make install \
-  && rm -Rf ${STAGE_DIR}/dbaas \
+  && rm -Rf ${STAGE_DIR}/dbaas 
 # Install sdl
-  && cd ${STAGE_DIR} \
+RUN cd ${STAGE_DIR} \
   && git clone https://gerrit.o-ran-sc.org/r/ric-plt/sdl \
   && cd sdl \
   && ./autogen.sh \
   && ./configure \
   && make -j ${nproc} all \
   && make install \
-  && rm -Rf ${STAGE_DIR}/sdl \
+  && rm -Rf ${STAGE_DIR}/sdl 
 # Install rapidjson
-  && cd ${STAGE_DIR} \
+RUN cd ${STAGE_DIR} \
   && git clone https://github.com/Tencent/rapidjson \
   && cd rapidjson \
   && mkdir build \
@@ -107,12 +131,12 @@ RUN apt-get update  \
   && make -j ${nproc} \
   && make install \
   && cd ${STAGE_DIR} \
-  && rm -rf rapidjson \
+  && rm -rf rapidjson 
 ##-----------------------------------
 # Now install the program
 #------------------------------------
 # build connector
-  && export CPATH=$CPATH:/usr/local/include \
+RUN export CPATH=$CPATH:/usr/local/include \
   && cd src \
   && make clean \
   && make -j ${nproc} \
