--- a/setup/millicar-xapp/Dockerfile
+++ b/setup/millicar-xapp/Dockerfile
@@ -43,7 +43,7 @@ ENV RMR_RTG_SVC="9999" \
 
 COPY ${CONNECTOR_DIR} ${STAGE_DIR}
 COPY ${XAPP_DIR} /home/${XAPP_DIR}
-# COPY ${XAPP_DIR_EF} /home/${XAPP_DIR_EF}
+COPY ${XAPP_DIR_EF} /home/${XAPP_DIR_EF}
 # COPY ${IPSO_DIR} /home/${IPSO_DIR}
 
 WORKDIR ${STAGE_DIR}
